z.new-all-in-one-windows-jumpbox/module1_aws_sydney_v2.template
{
    "AWSTemplateFormatVersion": "2010-09-09",

     "Description" : "This Cloud Formation Template creates a lab environment for the F5 Programmability/Super-NetOps Training Lab **WARNING** This template creates Amazon EC2 instances. You will be billed for the AWS resources used if you create a stack from this template. This template is supplied with no warranty or support.",



    "Parameters": {
        "KeyName": {
            "Description": "Name of an EC2 KeyPair to enable SSH access to the instance.",
            "Type": "AWS::EC2::KeyPair::KeyName",
            "ConstraintDescription": "must be the name of an existing EC2 KeyPair."
        },
        "RDPSource": {
            "Description": " The IP address range that can be used to access the Windows Jump Server using RDP.",
            "Type": "String",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "0.0.0.0/0",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        },
		"BigIpImageId": {
			"ConstraintDescription": "Must be a valid AMI Id",
			"Default": "ami-056a1aba66594cff9",
			"Description": "Please specify your Region BigIP AMI Id that you have Agreed to T&Cs. BYOL or PAYG [eg, PAYG: SYD v13.1=ami-056a1aba66594cff9]",
			"MaxLength": 255,
			"MinLength": 1,
			"Type": "String"
		},		
        "WindowsImageId": {
            "ConstraintDescription": "Must be a valid AMI Id",
            "Default": "ami-027db56cee714db93",
            "Description": "Please specify the 'Windows Server 2016 Base image' AMI Id that you have Agreed to T&Cs [eg, Singapore=ami-0466364b7c95e4a7d; SYD=ami-027db56cee714db93]",
            "MaxLength": 255,
            "MinLength": 1,
            "Type": "String"
        },		
        "LinuxImageId": {
            "ConstraintDescription": "Must be a valid AMI Id",
            "Default": "ami-0d9c4a2f1c21c130d",
            "Description": "Please specify the 'Ubuntu 16.04 LTS' AMI Id that you have Agreed to T&Cs [eg, N.VA=ami-068ab34816099a0a9; SYD=ami-0d9c4a2f1c21c130d]",
            "MaxLength": 255,
            "MinLength": 1,
            "Type": "String"
        }
    },		
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.1.0.0/16",
                "InstanceTenancy": "default",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "F5SNOpsLab"
                    }
                ]
            }
        },
        "ExternalSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.1.20.0/24",
                "AvailabilityZone" : { "Fn::Select" : [ "0", { "Fn::GetAZs" : "" } ] },
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "External"
                    }
                ]
            }
        },
        "Internalsubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.1.10.0/24",
                "AvailabilityZone" : { "Fn::Select" : [ "0", { "Fn::GetAZs" : "" } ] },
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Internal"
                    }
                ]
            }
        },
        "ManagementSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.1.1.0/24",
                "AvailabilityZone" : { "Fn::Select" : [ "0", { "Fn::GetAZs" : "" } ] },
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Management"
                    }
                ]
            }
        },
        "IGW": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "F5SNOpsIGW"
                    }
                ]
            }
        },
        "NATGW": {
            "Type" : "AWS::EC2::NatGateway",
            "Properties" : {
            "AllocationId" : {
                "Fn::GetAtt" : ["NATEIP", "AllocationId"]
                },
            "SubnetId" : {
                "Ref" : "AccessSubnet"
                }
            }
        },
        "aclc60e29a2": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "RouteTableInternal": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "InternalF5SNOpsRT"
                    }
                ]
            }
        },
        "RouteTableExternal": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "ExternalF5SNOpsRT"
                    }
                ]
            }
        },
        "ManagementSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "ManagementSubnet"
                },
                "RouteTableId": {
                    "Ref": "RouteTableInternal"
                }
            }
        },
        "InternalSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "Internalsubnet"
                },
                "RouteTableId": {
                    "Ref": "RouteTableInternal"
                }
            }
        },
        "ExternalSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "ExternalSubnet"
                },
                "RouteTableId": {
                    "Ref": "RouteTableInternal"
                }
            }
        },
        "AccessSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "AccessSubnet"
                },
                "RouteTableId": {
                    "Ref": "RouteTableExternal"
                }
            }
        },
        "eipWindows": {
            "Type": "AWS::EC2::EIP",
            "DependsOn": [
                "gw1"
            ],
            "Properties": {
                "Domain": "vpc"
            }
        },
        "NATEIP": {
            "Type": "AWS::EC2::EIP",
            "DependsOn": [
                "gw1"
            ],
            "Properties": {
                "Domain": "vpc"
            }
        },
        "LinuxInternalENI": {
            "Type": "AWS::EC2::NetworkInterface",
            "Properties": {
                "SourceDestCheck": "true",
                "SubnetId": {
                    "Ref": "Internalsubnet"
                },
                "PrivateIpAddresses": [
                    {
                        "PrivateIpAddress": "10.1.10.7",
                        "Primary": "true"
                    }
                ],
                "GroupSet": [
                    {
                        "Ref": "sgF5SNOpsInternal"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Linux:Internal"
                    }
                ]
            }
        },
        "BigipBExternalENI": {
            "Type": "AWS::EC2::NetworkInterface",
            "Properties": {
                "Description": "BIG-IP B  ext",
                "SourceDestCheck": "true",
                "SubnetId": {
                    "Ref": "ExternalSubnet"
                },
                "PrivateIpAddresses": [
                    {
                        "PrivateIpAddress": "10.1.20.5",
                        "Primary": "true"
                    }
                ],
                "GroupSet": [
                    {
                        "Ref": "sgF5SNOpsInternal"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "BIG-IP B:External"
                    }
                ]
            }
        },
        "BigipAInternalENI": {
            "Type": "AWS::EC2::NetworkInterface",
            "Properties": {
                "SourceDestCheck": "true",
                "SubnetId": {
                    "Ref": "Internalsubnet"
                },
                "PrivateIpAddresses": [
                    {
                        "PrivateIpAddress": "10.1.10.4",
                        "Primary": "true"
                    }
                ],
                "GroupSet": [
                    {
                        "Ref": "sgF5SNOpsInternal"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "BIG-IP A:Internal"
                    }
                ]
            }
        },
        "BigipBInternalENI": {
            "Type": "AWS::EC2::NetworkInterface",
            "Properties": {
                "SourceDestCheck": "true",
                "SubnetId": {
                    "Ref": "Internalsubnet"
                },
                "PrivateIpAddresses": [
                    {
                        "PrivateIpAddress": "10.1.10.5",
                        "Primary": "true"
                    }
                ],
                "GroupSet": [
                    {
                        "Ref": "sgF5SNOpsInternal"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "BIG-IP B: Internal"
                    }
                ]
            }
        },
        "BigipAExternalENI": {
            "Type": "AWS::EC2::NetworkInterface",
            "Properties": {
                "Description": "BIG-IP A External",
                "SourceDestCheck": "true",
                "SubnetId": {
                    "Ref": "ExternalSubnet"
                },
                "PrivateIpAddresses": [
                    {
                        "PrivateIpAddress": "10.1.20.4",
                        "Primary": "true"
                    }
                ],
                "GroupSet": [
                    {
                        "Ref": "sgF5SNOpsInternal"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "BIG-IP A:External"
                    }
                ]
            }
        },
        "WinExternalENI": {
            "Type": "AWS::EC2::NetworkInterface",
            "Properties": {
                "Description": "WIN:External",
                "SourceDestCheck": "true",
                "SubnetId": {
                    "Ref": "ExternalSubnet"
                },
                "PrivateIpAddresses": [
                    {
                        "PrivateIpAddress": "10.1.20.250",
                        "Primary": "true"
                    }
                ],
                "GroupSet": [
                    {
                        "Ref": "sgF5SNOpsInternal"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "WIN:External"
                    }
                ]
            }
        },
        "WinInternalENI": {
            "Type": "AWS::EC2::NetworkInterface",
            "Properties": {
                "SourceDestCheck": "true",
                "SubnetId": {
                    "Ref": "Internalsubnet"
                },
                "PrivateIpAddresses": [
                    {
                        "PrivateIpAddress": "10.1.10.250",
                        "Primary": "true"
                    }
                ],
                "GroupSet": [
                    {
                        "Ref": "sgF5SNOpsInternal"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "WIN:Internal"
                    }
                ]
            }
        },
        "F5SNOpsBIGIPA": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "DisableApiTermination": "false",
                "InstanceInitiatedShutdownBehavior": "stop",
                "ImageId": { "Ref": "BigIpImageId" },
                "InstanceType": "m4.4xlarge",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "Monitoring": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "F5SNOpsBIG-IPA"
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "SubnetId": {
                            "Ref": "ManagementSubnet"
                        },
                        "PrivateIpAddresses": [
                            {
                                "PrivateIpAddress": "10.1.1.10",
                                "Primary": "true"
                            }
                        ],
                        "GroupSet": [
                            {
                                "Ref": "sgF5SNOpsInternal"
                            }
                        ]
                    }
                ]
            }
        },
        "F5SNOpsBIGIPB": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "DisableApiTermination": "false",
                "InstanceInitiatedShutdownBehavior": "stop",
                "ImageId": { "Ref": "BigIpImageId" },
                "InstanceType": "m4.4xlarge",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "Monitoring": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "F5SNOpsBIG-IPB"
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "SubnetId": {
                            "Ref": "ManagementSubnet"
                        },
                        "PrivateIpAddresses": [
                            {
                                "PrivateIpAddress": "10.1.1.11",
                                "Primary": "true"
                            }
                        ],
                        "GroupSet": [
                            {
                                "Ref": "sgF5SNOpsInternal"
                            }
                        ]
                    }
                ]
            }
        },
        "F5SNOpsWindows": {
            "Type": "AWS::EC2::Instance",
            "Metadata": {
                "AWS::CloudFormation::Init" : {
                    "config": {
                        "packages" : {
                            "msi": {
                                "chrome": "https://s3-us-west-1.amazonaws.com/snops-installers/googlechromestandaloneenterprise64.msi",
                                "putty": "https://the.earth.li/~sgtatham/putty/latest/w64/putty-64bit-0.70-installer.msi",
                                "atom": "https://github.com/atom/atom/releases/download/v1.18.0/AtomSetup.msi"
                            }
                        },
                        "files": {
                            "C:\\Users\\Administrator\\Desktop\\postman-install.exe": {
                                "source": "https://dl.pstmn.io/download/latest/win64"
                            }
                        },
                        "commands": {
                            "a_cmd_shortcut": { "command": "mklink \"c:\\users\\administrator\\desktop\\Command Prompt\" c:\\windows\\system32\\cmd.exe" },
                            "b_create_putty_shortcut": { "command": "mklink c:\\users\\administrator\\desktop\\PuTTY \"c:\\Program Files\\PuTTY\\putty.exe\"" },
                            "z_done": { "command": "echo \"DONE\" > C:\\users\\Administrator\\desktop\\READY.txt" }
                        }
                    }
                }
            },
            "Properties": {
                "DisableApiTermination": "false",
                "InstanceInitiatedShutdownBehavior": "stop",
                "ImageId": { "Ref": "WindowsImageId" },
                "InstanceType": "c1.xlarge",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "Monitoring": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "F5SNOpsWindows"
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "SubnetId": {
                            "Ref": "ManagementSubnet"
                        },
                        "PrivateIpAddresses": [
                            {
                                "PrivateIpAddress": "10.1.1.250",
                                "Primary": "true"
                            }
                        ],
                        "GroupSet": [
                            {
                                "Ref": "sgF5SNOpsInternal"
                            }
                        ]
                    }
                ],
                "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
                    "<script>\n",
                    "cfn-init.exe -v -s ", { "Ref" : "AWS::StackId" },
                    " -r F5SNOpsWindows",
                    " --region ", { "Ref" : "AWS::Region" }, "\n",
                    "</script>"
                ]]}}
            }
        },
        "F5SNOpsLinux": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "DisableApiTermination": "false",
                "InstanceInitiatedShutdownBehavior": "stop",
                "ImageId": { "Ref": "LinuxImageId" },
                "InstanceType": "t2.large",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "Monitoring": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "F5SNOpsLinux"
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "SubnetId": {
                            "Ref": "ManagementSubnet"
                        },
                        "PrivateIpAddresses": [
                            {
                                "PrivateIpAddress": "10.1.1.7",
                                "Primary": "true"
                            }
                        ],
                        "GroupSet": [
                            {
                                "Ref": "sgF5SNOpsInternal"
                            }
                        ]
                    }
                ]
            }
        },
        "F5SNOpsDocker": {
            "Type": "AWS::EC2::Instance",
            "Metadata": {
                "AWS::CloudFormation::Init" : {
                    "config": {
                        "commands" : {
                            "a_allow_pw_auth": { "command": "sudo sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/g' /etc/ssh/sshd_config" },
                            "b_restart_sshd": { "command": "sudo service sshd restart" },
                            "c_add_admin_user": { "command": "sudo useradd -d /home/admin -G wheel -m -s /bin/bash admin" },
                            "d_set_admin_pw": { "command": " sudo sh -c 'echo \"admin:admin\" | chpasswd'" },
                            "e_yum_update": { "command": "sudo yum update -y" },
                            "f_install_docker": { "command": "sudo yum install -y docker"},
                            "g_start_docker": { "command": "sudo service docker start" },
                            "h_set_perms": { "command": "sudo usermod -a -G docker ec2-user" },
                            "i_set_perms": { "command": "sudo usermod -s /bin/bash -a -G docker admin" },
                            "j_docker_hello": { "command": "docker run hello-world" },
                            "k_docker_pull_snops": { "command": "docker pull f5devcentral/f5-super-netops-container:jenkins" }
                        }
                    }
                }
            },
            "Properties": {
                "DisableApiTermination": "false",
                "InstanceInitiatedShutdownBehavior": "stop",
                "ImageId": { "Ref": "LinuxImageId" },
                "InstanceType": "t2.large",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "Monitoring": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "F5SNOpsDocker"
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "SubnetId": {
                            "Ref": "ManagementSubnet"
                        },
                        "PrivateIpAddresses": [
                            {
                                "PrivateIpAddress": "10.1.1.8",
                                "Primary": "true"
                            }
                        ],
                        "GroupSet": [
                            {
                                "Ref": "sgF5SNOpsInternal"
                            }
                        ]
                    }
                ],
                "UserData" : { "Fn::Base64" :
                  { "Fn::Join" : ["", [
                     "#!/bin/bash -xe\n",
                     "# Install the files and packages from the metadata\n",
                     "/opt/aws/bin/cfn-init -v ",
                     "         --stack ", { "Ref" : "AWS::StackName" },
                     "         --resource F5SNOpsDocker ",
                     "         --region ", { "Ref" : "AWS::Region" }, "\n"
                  ]]}
                }
            }
        },
        "sgF5SNOpsInbound": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Inbound RDP",
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "sgF5SNOpsInternal": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Allows  internal comms  in VPC",
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "dbsgdefault": {
            "Type": "AWS::RDS::DBSecurityGroup",
            "Properties": {
                "GroupDescription": "default"
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "610bd400-9f48-4acf-bdf5-95910a384e18"
                }
            }
        },
        "acl1": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Egress": "true",
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": "100",
                "NetworkAclId": {
                    "Ref": "aclc60e29a2"
                }
            }
        },
        "acl2": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": "100",
                "NetworkAclId": {
                    "Ref": "aclc60e29a2"
                }
            }
        },
        "subnetacl1": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "aclc60e29a2"
                },
                "SubnetId": {
                    "Ref": "ManagementSubnet"
                }
            }
        },
        "subnetacl2": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "aclc60e29a2"
                },
                "SubnetId": {
                    "Ref": "ExternalSubnet"
                }
            }
        },
        "subnetacl3": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "aclc60e29a2"
                },
                "SubnetId": {
                    "Ref": "Internalsubnet"
                }
            }
        },
        "gw1": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "InternetGatewayId": {
                    "Ref": "IGW"
                }
            }
        },
        "route1": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": {
                    "Ref": "RouteTableInternal"
                },
                "NatGatewayId": {
                    "Ref": "NATGW"
                }
            },
            "DependsOn": "gw1"
        },
        "route2": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": {
                    "Ref": "RouteTableExternal"
                },
                "GatewayId": {
                    "Ref": "IGW"
                }
            },
            "DependsOn": "gw1"
        },
        "dchpassoc1": {
            "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "DhcpOptionsId": {
                    "Ref": "EC2DHCP1FOCR"
                }
            }
        },
        "assoc1": {
            "Type": "AWS::EC2::EIPAssociation",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "eipWindows",
                        "AllocationId"
                    ]
                },
                "NetworkInterfaceId": {
                    "Ref": "EC2NI29ZQC"
                }
            }
        },
        "eniattach1": {
            "Type": "AWS::EC2::NetworkInterfaceAttachment",
            "Properties": {
                "DeleteOnTermination": "true",
                "DeviceIndex": "1",
                "NetworkInterfaceId": {
                    "Ref": "BigipAInternalENI"
                },
                "InstanceId": {
                    "Ref": "F5SNOpsBIGIPA"
                }
            }
        },
        "eniattach2": {
            "Type": "AWS::EC2::NetworkInterfaceAttachment",
            "Properties": {
                "DeviceIndex": "2",
                "NetworkInterfaceId": {
                    "Ref": "BigipAExternalENI"
                },
                "InstanceId": {
                    "Ref": "F5SNOpsBIGIPA"
                }
            }
        },
        "eniattach3": {
            "Type": "AWS::EC2::NetworkInterfaceAttachment",
            "Properties": {
                "DeleteOnTermination": "true",
                "DeviceIndex": "1",
                "NetworkInterfaceId": {
                    "Ref": "BigipBInternalENI"
                },
                "InstanceId": {
                    "Ref": "F5SNOpsBIGIPB"
                }
            }
        },
        "eniattach4": {
            "Type": "AWS::EC2::NetworkInterfaceAttachment",
            "Properties": {
                "DeviceIndex": "2",
                "NetworkInterfaceId": {
                    "Ref": "BigipBExternalENI"
                },
                "InstanceId": {
                    "Ref": "F5SNOpsBIGIPB"
                }
            }
        },
        "eniattach5": {
            "Type": "AWS::EC2::NetworkInterfaceAttachment",
            "Properties": {
                "DeviceIndex": "2",
                "NetworkInterfaceId": {
                    "Ref": "WinExternalENI"
                },
                "InstanceId": {
                    "Ref": "F5SNOpsWindows"
                }
            }
        },
        "eniattach6": {
            "Type": "AWS::EC2::NetworkInterfaceAttachment",
            "Properties": {
                "DeleteOnTermination": "true",
                "DeviceIndex": "1",
                "NetworkInterfaceId": {
                    "Ref": "WinInternalENI"
                },
                "InstanceId": {
                    "Ref": "F5SNOpsWindows"
                }
            },
            "DependsOn": [
                "assoc1"
            ]
        },
        "eniattach7": {
            "Type": "AWS::EC2::NetworkInterfaceAttachment",
            "Properties": {
                "DeleteOnTermination": "true",
                "DeviceIndex": "1",
                "NetworkInterfaceId": {
                    "Ref": "LinuxInternalENI"
                },
                "InstanceId": {
                    "Ref": "F5SNOpsLinux"
                }
            }
        },
        "eniattach8": {
            "Type": "AWS::EC2::NetworkInterfaceAttachment",
            "Properties": {
                "DeleteOnTermination": "true",
                "DeviceIndex": "3",
                "NetworkInterfaceId": {
                    "Ref": "EC2NI29ZQC"
                },
                "InstanceId": {
                    "Ref": "F5SNOpsWindows"
                }
            },
            "DependsOn": [
                "assoc1"
            ]
        },
        "ingress1": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgF5SNOpsInbound"
                },
                "IpProtocol": "tcp",
                "FromPort": "3389",
                "ToPort": "3389",
                "CidrIp": {
                    "Ref": "RDPSource"
                }
            }
        },
        "ingress2": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgF5SNOpsInternal"
                },
                "IpProtocol": "tcp",
                "FromPort": "80",
                "ToPort": "80",
                "CidrIp": "10.1.0.0/16"
            }
        },
        "ingress3": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgF5SNOpsInternal"
                },
                "IpProtocol": "tcp",
                "FromPort": "22",
                "ToPort": "22",
                "CidrIp": "10.1.0.0/16"
            }
        },
        "ingress4": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgF5SNOpsInternal"
                },
                "IpProtocol": "tcp",
                "FromPort": "443",
                "ToPort": "443",
                "CidrIp": "10.1.0.0/16"
            }
        },
        "egress1": {
            "Type": "AWS::EC2::SecurityGroupEgress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgF5SNOpsInbound"
                },
                "IpProtocol": "-1",
                "CidrIp": "0.0.0.0/0"
            }
        },
        "egress2": {
            "Type": "AWS::EC2::SecurityGroupEgress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgF5SNOpsInternal"
                },
                "IpProtocol": "-1",
                "CidrIp": "0.0.0.0/0"
            }
        },
        "AccessSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.1.100.0/24",
                "AvailabilityZone" : { "Fn::Select" : [ "0", { "Fn::GetAZs" : "" } ] },
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Access"
                    }
                ]
            }
        },
        "EC2NI29ZQC": {
            "Type": "AWS::EC2::NetworkInterface",
            "Properties": {
                "SubnetId": {
                    "Ref": "AccessSubnet"
                },
                "PrivateIpAddresses": [
                    {
                        "PrivateIpAddress": "10.1.100.250",
                        "Primary": "true"
                    }
                ],
                "GroupSet": [
                    {
                        "Ref": "sgF5SNOpsInbound"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Windows:Access"
                    }
                ]
            }
        },
        "EC2DHCP1FOCR": {
            "Type": "AWS::EC2::DHCPOptions",
            "Properties": {
                "DomainName" : "f5.local",
                "DomainNameServers" : [ "4.2.2.2","8.8.8.8" ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "46fd6693-cb22-48d7-bfe1-57cffa1be770"
                }
            }
        }
    },

    "Outputs": {
        "WinInternalENI": {
            "Value": {
                "Ref": "WinInternalENI"
            }
        }
    }
}
